--- a/king.html
+++ b/king.html
@@ -26,6 +26,7 @@
             background-size: cover;
             background-position: left;
             background-color: #b6b6b6;
+            user-select: none;
         }
 
         .reset {
@@ -97,7 +98,7 @@
             width: 100vw;
             height: 100vh;
             position: fixed;
-            z-index: 9;
+            z-index: 999;
             top: 0;
             left: 0;
             background-color: rgba(0, 0, 0, 0.5);
@@ -105,7 +106,6 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            user-select: none;
         }
 
         .levelBox>div button {
@@ -160,6 +160,10 @@
         .goods {
             padding: 23px;
             border-color: rgb(255, 255, 255) !important;
+        }
+
+        .goods.grey {
+            filter: grayscale(100%);
         }
 
         .hint {
@@ -225,23 +229,23 @@
     <a href="index.html" class="hrefSheep">羊了个羊</a>
 
     <div class="operate">
-        <button class="disorganize btn">打乱</button>
+        <button class="disorganize btn">洗牌</button>
         <button class="recall btn">撤回</button>
-        <button class="selectLevel btn" level="15" index="0">第一关</button>
+        <button class="selectLevel btn" level="5" index="0">第一关</button>
         <button class="reset btn">重新开始</button>
     </div>
     <div class="levelBox">
         <div>
-            <button level="12" index="0">第一关</button>
-            <button level="20" index="1">第二关</button>
-            <button level="30" index="2">第三关</button>
-            <button level="45" index="3">第四关</button>
-            <button level="60" index="4">第五关</button>
-            <button level="75" index="5">第六关</button>
-            <button level="90" index="6">第七关</button>
-            <button level="110" index="7">第八关</button>
-            <button level="130" index="8">第九关</button>
-            <button level="150" index="9">第十关</button>
+            <button level="5" index="0">第一关</button>
+            <button level="8" index="1">第二关</button>
+            <button level="12" index="2">第三关</button>
+            <button level="17" index="3">第四关</button>
+            <button level="23" index="4">第五关</button>
+            <button level="30" index="5">第六关</button>
+            <button level="38" index="6">第七关</button>
+            <button level="47" index="7">第八关</button>
+            <button level="57" index="8">第九关</button>
+            <button level="68" index="9">第十关</button>
         </div>
     </div>
     <button class="addDifficult">增加难度</button>
@@ -282,9 +286,9 @@
         let range = 350;
 
         const goodsList = [
-            '阿骨朵', '艾琳', '嫦娥', '大师', '暃', '伽罗', '金蝉', '镜', '凯',
-            '澜', '李信', '马超', '蒙恬', '蒙犽', '盘古', '桑启', '沈梦溪', '司空震', '司马懿',
-            '孙策', '婉儿', '西施', '夏洛特', '瑶', '曜', '元歌', '云樱', '云中君', '猪八戒',
+            '艾琳', '嫦娥', '大师', '伽罗', '金蝉', '镜', '凯', '司马懿',
+            '澜', '李信', '马超', '蒙恬', '蒙犽', '盘古', '沈梦溪', '猪八戒',
+            '孙策', '婉儿', '西施', '夏洛特', '瑶', '曜', '元歌', '云樱', '云中君'
         ]
 
         function randomNum(min, max) {
@@ -312,14 +316,14 @@
             goods.classList.add('goods');
             goods.style.backgroundImage = `url(king/${heroRandomNum(oneGoods)}.webp)`;
             goods.setAttribute('mark', oneGoods);
-            goods.style.top = randomNum(222, window.innerHeight - 333) + 'px';
+            goods.style.top = randomNum(155, window.innerHeight - 222) + 'px';
             goods.style.left = randomNum(20 + range, window.innerWidth - 70 - range) + 'px';
             body.appendChild(goods);
             goods.setAttribute('onclick', 'goodsClick(this)');
         }
 
         function goodsClick(self) {
-            if (boxVolume >= 7) return;
+            if (boxVolume >= 7 || self.classList.contains('grey')) return;
             createdAudio('king/click.mp3');
             const newGoods = self.cloneNode();
             newGoods.style.top = 0;
@@ -328,16 +332,18 @@
             newGoods.removeAttribute('onclick');
             boxGoodsLeft += spacing;
             boxVolume++;
+            console.log('点击：',boxVolume);
             newGoods.style.opacity = 0;
             box.appendChild(newGoods);
-            self.style.transition = 'top .4s, left .4s';
+            self.style.transition = 'top .2s, left .2s';
             self.style.padding = 0;
             self.style.top = box.offsetTop + 2 + 'px';
             self.style.left = boxGoodsLeft + box.offsetLeft - self.offsetWidth + 'px';
             setTimeout(() => {
                 newGoods.style.opacity = 1;
                 self.remove();
-            }, 400);
+                coverGoods();
+            }, 100);
             let count = 0;
             let children = [...box.children];
             children.forEach(item => item.getAttribute('mark') == newGoods.getAttribute('mark') && count++);
@@ -347,6 +353,7 @@
                 emptying(self);
                 surplus.innerText = allGoods.length - 3;
                 boxVolume -= 3;
+                console.log('得分：',boxVolume);
                 children.forEach(item => {
                     if (item.getAttribute('mark') == newGoods.getAttribute('mark') && deleteNum > 0) {
                         deleteNum--;
@@ -363,6 +370,7 @@
                     }
                 });
             }
+            console.log('你输了：',boxVolume);
             boxVolume >= 7 && gameFinish('很遗憾你输了', 'audio/失败.mp3');
             setTimeout(() => {
                 allGoods = document.querySelectorAll('.goods');
@@ -374,7 +382,7 @@
                     levelRecordArr[selectLevel.getAttribute('index')]++;
                     localStorage.setItem(levelRecord, JSON.stringify(levelRecordArr));
                 }
-            }, 450);
+            }, 300);
         }
 
         function emptying(hero) {
@@ -405,11 +413,12 @@
 
         function gameStart(number) {
             boxVolume = 0;
+            console.log('游戏开始：',boxVolume);
             boxGoodsLeft = 0;
             allGoods = document.querySelectorAll('.goods');
             allGoods.forEach(item => item.remove());
             disorganizeNum = 3;
-            disorganize.innerText = `打乱 ${disorganizeNum}`;
+            disorganize.innerText = `洗牌 ${disorganizeNum}`;
             recallNum = 3;
             recall.innerText = `撤回 ${recallNum}`;
             chronoscopeNum = 0;
@@ -419,8 +428,12 @@
                 for (let i = 0; i < 3; i++) createGoods(goodsList[num]);
             }
             allGoods = document.querySelectorAll('.goods');
-            allGoods.forEach(item => item.style.animation = `enter .3s`);
+            allGoods.forEach((item, index) => {
+                item.style.animation = `enter .3s`;
+                item.style.zIndex = index + 1;
+            });
             surplus.innerText = allGoods.length;
+            setTimeout(coverGoods, 300);
         }
 
         disorganize.addEventListener('click', () => {
@@ -429,10 +442,11 @@
             disorganize.innerText = `打乱 ${disorganizeNum}`;
             allGoods.forEach(item => {
                 if (!item.getAttribute('onclick')) return;
-                item.style.transition = 'top .4s, left .7s';
-                item.style.top = randomNum(222, window.innerHeight - 333) + 'px';
+                item.style.transition = 'top .25s, left .25s';
+                item.style.top = randomNum(155, window.innerHeight - 222) + 'px';
                 item.style.left = randomNum(20 + range, window.innerWidth - 70 - range) + 'px';
             });
+            setTimeout(coverGoods, 300);
         });
         disorganize.innerText = `打乱 ${disorganizeNum}`;
 
@@ -447,7 +461,7 @@
             audio.addEventListener('ended', e => e.target.remove());
         }
 
-        BGAudio.volume = 0.8;
+        BGAudio.volume = 0.6;
         audio.addEventListener('click', () => {
             if (BGAudio.getAttribute('src')) BGAudio.setAttribute('src', '');
             else BGAudio.setAttribute('src', 'king/BGM2.mp3');
@@ -462,12 +476,13 @@
             let lastChild = box.children[len - 1];
             const newGoods = lastChild.cloneNode();
             newGoods.style.padding = '23px';
-            newGoods.style.top = randomNum(222, window.innerHeight - 333) + 'px';
+            newGoods.style.top = randomNum(155, window.innerHeight - 222) + 'px';
             newGoods.style.left = randomNum(20 + range, window.innerWidth - 70 - range) + 'px';
             newGoods.setAttribute('onclick', 'goodsClick(this)');
             body.appendChild(newGoods);
             boxGoodsLeft -= spacing;
             boxVolume--;
+            console.log('撤回：',boxVolume);
             lastChild.remove();
         });
         recall.innerText = `撤回 ${recallNum}`;
@@ -514,6 +529,27 @@
             }
             reset.click();
         });
+
+        function isIntersect(element1, element2) {
+            const rect1 = element1.getBoundingClientRect();
+            const rect2 = element2.getBoundingClientRect();
+            return !(rect1.right - 10 < rect2.left || rect1.left > rect2.right - 10 || rect1.bottom - 10 < rect2.top || rect1.top > rect2.bottom - 10);
+        }
+
+        function coverGoods() {
+            allGoods.forEach(item => item.classList.remove('grey'));
+            allGoods.forEach(item1 => {
+                allGoods.forEach(item2 => {
+                    if(isIntersect(item1, item2) && item1 != item2) {
+                        if(parseInt(item1.style.zIndex) > parseInt(item2.style.zIndex)) {
+                            item2.classList.add('grey');
+                        } else {
+                            item1.classList.add('grey');
+                        }
+                    }
+                });
+            });
+        }
 
         gameStart(selectLevel.getAttribute('level'));
 
