--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
               notMutedSVG = '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/><path d="M32 15L32 15C32.6232 15.5565 33.1881 16.1797 33.6841 16.8588C35.1387 18.8504 36 21.3223 36 24C36 26.6545 35.1535 29.1067 33.7218 31.0893C33.2168 31.7885 32.6391 32.4293 32 33" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M34.2359 41.1857C40.0836 37.6953 44 31.305 44 24C44 16.8085 40.2043 10.5035 34.507 6.97906" stroke="#ffffff" stroke-width="4" stroke-linecap="round"/></svg>';
 
         const goodsList = [
-            'zoon1', 'zoon2', 'zoon3', 'zoon4', 'zoon5', 'zoon6', 'zoon7', 'zoon8',
-            'fruit1', 'fruit2', 'fruit3', 'fruit4', 'fruit5', 'fruit6', 'fruit7', 'fruit8',
-            'cake1', 'cake2', 'cake3', 'cake4', 'cake5', 'cake6', 'cake7', 'cake8',
+            'zoon1', 'zoon2', 'zoon3', 'zoon4', 'zoon5', 'zoon6', 'zoon7', 'zoon8', 'zoon9',
+            'fruit1', 'fruit2', 'fruit3', 'fruit4', 'fruit5', 'fruit6', 'fruit7', 'fruit8', 'fruit9',
+            'cake1', 'cake2', 'cake3', 'cake4', 'cake5', 'cake6', 'cake7', 'cake8', 'cake9',
         ]
 
         function randomNum(min, max) {
@@ -395,9 +395,9 @@
                 controlBGM.innerHTML = mutedSVG;
             } else {
                 BGAudio.setAttribute('src', 'audio/BGM1.mp3');
+                BGAudio.play();
                 controlBGM.innerHTML = notMutedSVG;
             }
-            BGAudio.play();
         });
         controlBGM.innerHTML = mutedSVG;
 
@@ -450,8 +450,9 @@
         }
 
         function coverGoods() {
-            allGoods.forEach(item => item.classList.remove('grey'));
             for (let i = 0; i < allGoods.length; i++) {
+                allGoods[i].classList.remove('grey');
+
                 for (let j = i + 1; j < allGoods.length; j++) {
                     if(isIntersect(allGoods[i], allGoods[j]) && allGoods[i] != allGoods[j]) {
                         if(parseInt(allGoods[i].style.zIndex) > parseInt(allGoods[j].style.zIndex)) {
