--- a/king.html
+++ b/king.html
@@ -219,22 +219,22 @@
     <div class="operate">
         <button class="disorganize">洗牌</button>
         <button class="recall">撤回</button>
-        <button class="lightUp">点亮</button>
-        <button class="selectLevel" level="5" index="0">第一关</button>
+        <button class="lightUp">魔法</button>
+        <button class="selectLevel" level="7" index="0">第一关</button>
         <button class="reset">重置</button>
     </div>
     <div class="levelBox">
         <div>
-            <button level="5" index="0">第一关</button>
-            <button level="8" index="1">第二关</button>
-            <button level="11" index="2">第三关</button>
-            <button level="14" index="3">第四关</button>
-            <button level="17" index="4">第五关</button>
-            <button level="20" index="5">第六关</button>
-            <button level="24" index="6">第七关</button>
-            <button level="29" index="7">第八关</button>
-            <button level="34" index="8">第九关</button>
-            <button level="40" index="9">第十关</button>
+            <button level="7" index="0">第一关</button>
+            <button level="12" index="1">第二关</button>
+            <button level="18" index="2">第三关</button>
+            <button level="24" index="3">第四关</button>
+            <button level="30" index="4">第五关</button>
+            <button level="36" index="5">第六关</button>
+            <button level="44" index="6">第七关</button>
+            <button level="52" index="7">第八关</button>
+            <button level="60" index="8">第九关</button>
+            <button level="70" index="9">第十关</button>
         </div>
     </div>
     <button class="addDifficult">增加难度</button>
@@ -250,7 +250,6 @@
         const html = document.documentElement;
         const body = document.body;
         const box = document.querySelector('.box');
-        let allGoods = document.querySelectorAll('.goods');
         const selectLevel = document.querySelector('.selectLevel');
         const disorganize = document.querySelector('.disorganize');
         const reset = document.querySelector('.reset');
@@ -266,6 +265,7 @@
         const hint = document.querySelector('.hint');
         const addDifficult = document.querySelector('.addDifficult');
         const lightUp = document.querySelector('.lightUp');
+        let allGoods = document.querySelectorAll('.goods');
         let boxGoodsLeft = 0;
         let boxVolume = 0;
         let spacing = 65;
@@ -275,8 +275,11 @@
         let difficult = false;
         let range = 350;
         let lightUpNum = 3;
-        const mutedSVG = '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect opacity="0.01" x="30" y="18" width="13" height="13" fill="#ffffff"/><mask id="icon-1441a00e6a0e536" maskUnits="userSpaceOnUse" x="30" y="18" width="13" height="13" style="mask-type: alpha"><rect x="30" y="18" width="13" height="13" fill="#ffffff"/></mask><g mask="url(#icon-1441a00e6a0e536)"><path d="M40.7348 20.2858L32.2495 28.7711" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M32.2496 20.2858L40.7349 28.7711" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></g><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/></svg>',
-              notMutedSVG = '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/><path d="M32 15L32 15C32.6232 15.5565 33.1881 16.1797 33.6841 16.8588C35.1387 18.8504 36 21.3223 36 24C36 26.6545 35.1535 29.1067 33.7218 31.0893C33.2168 31.7885 32.6391 32.4293 32 33" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M34.2359 41.1857C40.0836 37.6953 44 31.305 44 24C44 16.8085 40.2043 10.5035 34.507 6.97906" stroke="#ffffff" stroke-width="4" stroke-linecap="round"/></svg>';
+        let goldFinger = false;
+        const mutedSVG =
+            '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><rect opacity="0.01" x="30" y="18" width="13" height="13" fill="#ffffff"/><mask id="icon-1441a00e6a0e536" maskUnits="userSpaceOnUse" x="30" y="18" width="13" height="13" style="mask-type: alpha"><rect x="30" y="18" width="13" height="13" fill="#ffffff"/></mask><g mask="url(#icon-1441a00e6a0e536)"><path d="M40.7348 20.2858L32.2495 28.7711" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M32.2496 20.2858L40.7349 28.7711" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/></g><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/></svg>',
+            notMutedSVG =
+            '<?xml version="1.0" encoding="UTF-8"?><svg width="33" height="33" viewBox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M24 6V42C17 42 11.7985 32.8391 11.7985 32.8391H6C4.89543 32.8391 4 31.9437 4 30.8391V17.0108C4 15.9062 4.89543 15.0108 6 15.0108H11.7985C11.7985 15.0108 17 6 24 6Z" fill="none" stroke="#ffffff" stroke-width="4" stroke-linejoin="round"/><path d="M32 15L32 15C32.6232 15.5565 33.1881 16.1797 33.6841 16.8588C35.1387 18.8504 36 21.3223 36 24C36 26.6545 35.1535 29.1067 33.7218 31.0893C33.2168 31.7885 32.6391 32.4293 32 33" stroke="#ffffff" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/><path d="M34.2359 41.1857C40.0836 37.6953 44 31.305 44 24C44 16.8085 40.2043 10.5035 34.507 6.97906" stroke="#ffffff" stroke-width="4" stroke-linecap="round"/></svg>';
 
 
         const goodsList = [
@@ -317,7 +320,8 @@
         }
 
         function goodsClick(self) {
-            if (boxVolume >= 7 || self.classList.contains('grey')) return;
+            if (boxVolume >= 7 || (self.classList.contains('grey') && !goldFinger)) return;
+            goldFinger = false;
             createdAudio('king/click.mp3');
             const newGoods = self.cloneNode();
             newGoods.style.top = 0;
@@ -326,18 +330,19 @@
             newGoods.removeAttribute('onclick');
             boxGoodsLeft += spacing;
             boxVolume++;
-            console.log('点击：',boxVolume);
+            console.log('点击：', boxVolume);
             newGoods.style.opacity = 0;
             box.appendChild(newGoods);
             self.style.transition = 'top .2s, left .2s';
             self.style.padding = 0;
             self.style.top = box.offsetTop + 2 + 'px';
             self.style.left = boxGoodsLeft + box.offsetLeft - self.offsetWidth + 'px';
+            self.style.zIndex = 999;
             setTimeout(() => {
                 newGoods.style.opacity = 1;
                 self.remove();
                 coverGoods();
-            }, 100);
+            }, 200);
             let count = 0;
             let children = [...box.children];
             children.forEach(item => item.getAttribute('mark') == newGoods.getAttribute('mark') && count++);
@@ -347,7 +352,7 @@
                 emptying(self);
                 surplus.innerText = allGoods.length - 3;
                 boxVolume -= 3;
-                console.log('得分：',boxVolume);
+                console.log('得分：', boxVolume);
                 children.forEach(item => {
                     if (item.getAttribute('mark') == newGoods.getAttribute('mark') && deleteNum > 0) {
                         deleteNum--;
@@ -360,11 +365,11 @@
                                 item.style.transition = 'left .2s';
                                 item.style.left = index * spacing + 'px';
                             });
-                        }, 200);
+                        }, 250);
                     }
                 });
             }
-            console.log('你输了：',boxVolume);
+            console.log('你输了：', boxVolume);
             boxVolume >= 7 && gameFinish('很遗憾你输了', 'audio/失败.mp3');
             setTimeout(() => {
                 allGoods = document.querySelectorAll('.goods');
@@ -388,10 +393,14 @@
             if (num < 3) {
                 heroAudio.setAttribute('src', `king/${hero.getAttribute('mark')}.mp3`);
                 heroAudio.play();
-                hint.style.display = 'block';
-                hint.innerText = hero.getAttribute('mark') + ' 已清空';
-                setTimeout(() => hint.style.display = 'none', 1500);
+                showHint(hero.getAttribute('mark') + ' 已清空', 1500);
             }
+        }
+
+        function showHint(str, time) {
+            hint.style.display = 'block';
+            hint.innerText = str;
+            setTimeout(() => hint.style.display = 'none', time);
         }
 
         function gameFinish(str, audio) {
@@ -408,7 +417,7 @@
 
         function gameStart(number) {
             boxVolume = 0;
-            console.log('游戏开始：',boxVolume);
+            console.log('游戏开始：', boxVolume);
             boxGoodsLeft = 0;
             allGoods = document.querySelectorAll('.goods');
             allGoods.forEach(item => item.remove());
@@ -417,7 +426,7 @@
             recallNum = 3;
             recall.innerText = `撤回 ${recallNum}`;
             lightUpNum = 3;
-            lightUp.innerText = `点亮 ${lightUpNum}`;
+            lightUp.innerText = `魔法 ${lightUpNum}`;
             chronoscopeNum = 0;
             chronoscope.innerText = chronoscopeNum;
             for (let i = 0; i < number; i++) {
@@ -428,9 +437,35 @@
             allGoods.forEach((item, index) => {
                 item.style.animation = `enter .3s`;
                 item.style.zIndex = index + 1;
+                item.setAttribute('id', index);
+                item.classList.add('grey');
             });
             surplus.innerText = allGoods.length;
-            setTimeout(coverGoods, 300);
+            setTimeout(setGrayCover, 300);
+        }
+
+        function setGrayCover() {
+            for (let i = 0; i < allGoods.length; i++) {
+                allGoods[i].classList.remove('grey');
+                for (let j = i + 1; j < allGoods.length; j++) {
+                    if (isIntersect(allGoods[i], allGoods[j])) {
+                        if (parseInt(allGoods[i].style.zIndex) > parseInt(allGoods[j].style.zIndex)) {
+                            allGoods[j].classList.add('grey');
+                            allGoods[j].setAttribute('cover', allGoods[j].getAttribute('cover') + ',' + allGoods[i].getAttribute('id'));
+                        } else {
+                            allGoods[i].classList.add('grey');
+                            allGoods[i].setAttribute('cover', allGoods[i].getAttribute('cover') + ',' + allGoods[j].getAttribute('id'));
+                        }
+                    }
+                }
+            }
+            allGoods.forEach(item => {
+                if (item.getAttribute('cover')) {
+                    item.setAttribute('cover', item.getAttribute('cover').slice(5));
+                } else {
+                    item.removeAttribute('cover');
+                }
+            });
         }
 
         disorganize.addEventListener('click', () => {
@@ -439,11 +474,13 @@
             disorganize.innerText = `洗牌 ${disorganizeNum}`;
             allGoods.forEach(item => {
                 if (!item.getAttribute('onclick')) return;
-                item.style.transition = 'top .25s, left .25s';
+                item.style.transition = 'top .4s, left .4s';
                 item.style.top = randomNum(155, window.innerHeight - 222) + 'px';
                 item.style.left = randomNum(20 + range, window.innerWidth - 70 - range) + 'px';
+                item.classList.add('grey');
+                item.removeAttribute('cover');
             });
-            setTimeout(coverGoods, 300);
+            setTimeout(setGrayCover, 500);
         });
         disorganize.innerText = `洗牌 ${disorganizeNum}`;
 
@@ -485,7 +522,7 @@
             body.appendChild(newGoods);
             boxGoodsLeft -= spacing;
             boxVolume--;
-            console.log('撤回：',boxVolume);
+            console.log('撤回：', boxVolume);
             lastChild.remove();
         });
         recall.innerText = `撤回 ${recallNum}`;
@@ -536,33 +573,37 @@
         function isIntersect(element1, element2) {
             const rect1 = element1.getBoundingClientRect();
             const rect2 = element2.getBoundingClientRect();
-            return !(rect1.right - 5 < rect2.left || rect1.left > rect2.right - 5 || rect1.bottom - 5 < rect2.top || rect1.top > rect2.bottom - 5);
+            return rect1.right > rect2.left && rect1.left < rect2.right && rect1.bottom > rect2.top && rect1.top < rect2.bottom;
         }
 
         function coverGoods() {
             for (let i = 0; i < allGoods.length; i++) {
-                allGoods[i].classList.remove('grey');
-
-                for (let j = i + 1; j < allGoods.length; j++) {
-                    if(isIntersect(allGoods[i], allGoods[j]) && allGoods[i] != allGoods[j]) {
-                        if(parseInt(allGoods[i].style.zIndex) > parseInt(allGoods[j].style.zIndex)) {
-                            allGoods[j].classList.add('grey');
-                        } else {
-                            allGoods[i].classList.add('grey');
+                if (allGoods[i].getAttribute('cover')) {
+                    const arr = allGoods[i].getAttribute('cover').split(',');
+                    let flag = true;
+                    for (let i = 0; i < arr.length; i++) {
+                        let el = document.querySelector(`[id="${arr[i]}"]`);
+                        if (el && el.getAttribute('onclick') && !el.getAttribute('temp')) {
+                            flag = false;
+                            break;
                         }
                     }
+                    flag && allGoods[i].classList.remove('grey');
+                } else {
+                    allGoods[i].classList.remove('grey');
                 }
             }
         }
 
         lightUp.addEventListener('click', () => {
             if (lightUpNum <= 0) return;
-            allGoods.forEach(item => item.classList.remove('grey'));
+            goldFinger = true;
+            showHint('可以点击灰色卡片哦', 3000);
             lightUpNum--;
-            lightUp.innerText = `点亮 ${lightUpNum}`;
+            lightUp.innerText = `魔法 ${lightUpNum}`;
         });
 
-        lightUp.innerText = `点亮 ${lightUpNum}`;
+        lightUp.innerText = `魔法 ${lightUpNum}`;
 
         gameStart(selectLevel.getAttribute('level'));
 
